--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,13 @@
   right: 0
 }
 
+.imgDiv{
+  width: 60% !important;
+  margin: auto !important;
+  display: flex !important;
+  margin-top: 20px !important;
+}
+
 
 /* Responsive */
 @media (max-width: 767px) {
@@ -52,6 +59,15 @@
     border: 2px solid;
     width: 120% !important;
   } */
+
+  
+.imgDiv{
+  width: 100% !important;
+  margin: auto !important;
+  display: flex !important;
+  margin-top: 50px !important;
+
+}
   .alldivcontainers{
     width: 100%;
   }
