--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,147 @@
   box-sizing: border-box;
 }
 
+/* Emialpage */
+
+.coverupemail{
+  /* border: 1px solid; */
+  background-color: #5891ff;
+  height: 100vh;
+  position: absolute;
+  width: 100%;
+  top: 0px !important;
+  align-items: center;
+  display: flex;
+}
+
+.mymaildiv {
+  display: flex;
+  height: 80vh;
+  width: 100%;
+  justify-content: center;
+
+}
+
+.mymaileachdiv2,
+.mymaileachdiv {
+  background-color: white;
+  border: 1px solid#5891ff;
+  width: 40%;
+  border-radius: 4px;
+}
+
+.MailBtnStyle {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.MailBtnStyle2 {
+  /* width: 30vh !important; */
+  padding: 10px;
+  background-color: #5891ff;
+}
+
+
+.mymaileachdiv {
+  background-color: bisque;
+  background-image: url(../src/assets/Forgot\ password.gif);
+  background-size: cover;
+  background-position: center;
+}
+
+
+.mailform {
+  --width-of-input: 80vh;
+  --border-height: 1px;
+  --border-before-color: rgba(221, 221, 221, 0.39);
+  --border-after-color: #5891ff;
+  --input-hovered-color: #4985e01f;
+  position: relative;
+  width: var(--width-of-input);
+  margin: auto;
+  top: 30%;
+}
+
+.mailinput {
+  color: black;
+  font-size: 1.3rem;
+  background-color: transparent;
+  width: 100%;
+  box-sizing: border-box;
+  padding-inline: 0.5em;
+  padding-block: 0.7em;
+  border: none;
+  border-bottom: var(--border-height) solid var(--border-before-color);
+}
+
+.input-border1 {
+  position: absolute;
+  background: var(--border-after-color);
+  width: 0%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  transition: 0.3s;
+}
+
+input:hover {
+  background: var(--input-hovered-color);
+}
+
+input:focus {
+  outline: none;
+}
+
+input:focus~.input-border1 {
+  width: 100%;
+}
+
+@media (max-width:688px) {
+  .mymaildiv {
+      display: block;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      margin-top: 15% !important;
+      width: 100% !important;
+      border: 2px solid#5891ff;
+      border-radius: 15px !important;
+  }
+  .mymaileachdiv2 {
+      width: 100% !important; 
+      border: none;
+      margin-top: 10%;
+  }
+  .mymaileachdiv {
+     display: none;
+  }
+  .mailform {
+      --width-of-input: 95%;
+      --border-height: 1px;
+      --border-before-color: rgba(221, 221, 221, 0.39);
+      --border-after-color: #5891ff;
+      --input-hovered-color: #4985e01f;
+      position: relative;
+      width: var(--width-of-input);
+      margin: auto;
+      top: 30%;
+  }
+  .MailBtnStyle2 {
+      width: 20vh !important;
+      padding: 10px;
+      background-color: #5891ff;
+  }
+  .MailBtnStyle {
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+  }
+  
+}
+
 .imgblog1{
   height: 300px !important;
   background-image: url(../src/assets/img/blog-1.jpg);
