--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,7 @@
 }
 
 /* Emialpage */
-
 .coverupemail{
-  /* border: 1px solid; */
   background-color: #5891ff;
   height: 100vh;
   position: absolute;
@@ -30,7 +28,6 @@
   background-color: white;
   border: 1px solid#5891ff;
   width: 40%;
-  border-radius: 4px;
 }
 
 .MailBtnStyle {
@@ -135,6 +132,98 @@ input:focus~.input-border1 {
   }
   
 }
+
+
+/* forgetpassword */
+.mycondiv{
+  display: flex;
+  height: 80vh !important;
+  justify-content: center !important;
+  /* border: 2px solid; */
+  width: 100%;
+}
+.Forgetpassdiv{
+  height: 100vh;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  align-items: center;
+  display: flex;
+  background-color: #5891ff;
+}
+.myeachdiv, .myeachdiv2{
+  border: 1px solid;
+  border-color: #5891ff;
+  width: 35%;
+}
+
+.forgetinputwidth{
+  width: 95% !important;
+  font-size: 18px !important;
+}
+
+.forgetinputwidthdiv{
+  /* border: 1px solid ; */
+  text-align: center !important;
+}
+
+.myeachdiv2{
+  background-color: white;
+}
+
+.styleBtn{
+  background-color: #5891ff;
+
+}
+
+.myeachdiv{
+  background-color: #4F46E5;
+  background-image: url(../src/assets/Forgot\ password.gif);
+  background-position: center;
+}
+
+.taketop{
+  margin-top: 10% !important;
+}
+@media (max-width:688px) {
+  .fordivone{
+      width: 100%;
+  }
+  .mycondiv{
+      display: block;
+      height: 70vh !important;
+      display: flex;
+      align-items: center;
+      background-color: #4F46E5;
+      padding: 5px;
+      border: 2px solid blue;
+      margin-top: 30%;
+     
+  }
+  .forgetinputwidth{
+      width: 100% !important;
+      font-size: 15px !important;
+  }
+  .myeachdiv2{
+      padding: 20px;
+  }
+  .myeachdiv, .myeachdiv2{
+      border-color: #4F46E5;
+      background-color: whitesmoke;
+      border-radius: 10px;
+      width: 100%;
+  }
+  .myeachdiv{
+      display: none;
+  }
+  .taketop{
+      margin-top: 5% !important;
+  }
+}
+
+
+
+
 
 .imgblog1{
   height: 300px !important;
