--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,11 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+.avatarprofile{
+  width: 55px;
+  height: 55px;
+  overflow: hidden;
+}
 /* Emialpage */
 .coverupemail{
   background-color: #5891ff;
