--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,40 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.AdminContainer{
+  background-color: #6967CE;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  display: flex;
+}
+
+.eachDiv, .eachDiv2{
+  width: 80%;
+  height: 100%;
+  border: 1px solid #3c3ac5;
+  align-items: center !important;
+  display: flex;
+}
+
+.eachDiv2{
+  background-image: url(../src/assets/3071357.jpg);
+  background-size: cover;
+}
+
+.AdminInner{
+  background-color: white;
+  display: flex;
+  width: 80% !important;
+  border: 2px solid #3c3ac5;
+  margin: auto;
+  height: 80%;
+  align-items: center;
+}
+
 .avatarprofile{
   width: 50px;
   height: 50px;
