--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,15 @@
   box-sizing: border-box;
 }
 
-
+.passwordadmin_responsive{
+  align-items: center !important;
+  display: flex;
+}
 
 .Admindashboardcon{
   position: absolute;
   top: 0px;
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   /* background-color: #ffffff transparent;
   color: white; */
@@ -25,11 +28,11 @@
 
 .Admininnerseconddiv{
   width: 82%;
+
 }
 
 .Admininnerfirstdiv, .Admininnerseconddiv{
-  /* border: 1px solid ; */
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .AdminContainer{
@@ -166,6 +169,17 @@ input:focus~.input-border1 {
 }
 
 @media (max-width:688px) {
+  .Admininnerfirstdiv{
+    width: 0%;
+    z-index: 100;
+    /* border: 2px solid red; */
+  }
+  
+  .Admininnerseconddiv{
+    width: 100%;
+    /* border: 2px solid ; */
+  
+  }
   .eachDiv{
     width: 100%;
   }
