--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+.dbcontainer_ht{
+  height: 200px;
+}
+
 .badge {
   background-color: red;
   /* background-color: red; */
@@ -48,13 +52,12 @@
 
 .Admininnerseconddiv {
   width: 82%;
-
 }
 
-.Admininnerfirstdiv,
+/* .Admininnerfirstdiv,
 .Admininnerseconddiv {
-  /* height: 100vh; */
-}
+  height: 100vh;
+} */
 
 .AdminContainer {
   /* background-color: #6967CE; */
@@ -192,7 +195,11 @@ input:focus~.input-border1 {
 }
 
 @media (max-width:688px) {
-
+  .dbcontainer_ht{
+    height: 250px;
+    
+    /* padding: 20px; */
+  }
   .badge {
     right: 60px;
   }
