--- a/src/components/Transactionhistory/Transactionhistory.css
+++ b/src/components/Transactionhistory/Transactionhistory.css
@@ -25,4 +25,7 @@ th, td {
     th, td {
         font-size: 12px;  /* Adjust the font size on smaller screens */
     }
+    .alldivcontainers {
+        padding: 2px;
+    }
 }
